  anymore (unless started with `:spawn --verbose`). 
- When a process got killed by a signal, the signal name is now displayed in
  the message.
- The qute-pass will now try looking up candidate pass entries based on the
  calling tab's verbatim netloc (hostname including port and username) if it
  can't find a match with an earlier candidate (FQDN, IPv4 etc).

Fixed
~~~~~

- When the devtools are clicked but `input.insert_mode.auto_enter` is set to
  `false`, insert mode now isn't entered anymore.
- The search wrapping messages are now correctly displayed in (hopefully) all
  cases with QtWebEngine.
- When a message with the same text as a currently already displayed one gets
  shown, qutebrowser used to only show one message. This is now only done when the
  two messages are completely equivalent (text, level, etc.) instead of doing so
  when only the text matches.
- The `progress` and `backforward` statusbar widgets now stay removed if you
  choose to remove them. Previously they would appear again on navigation.
- Rare crash when running userscripts with crashed renderer processes.
- Multiple rare crashes when quitting qutebrowser.
- The `asciidoc2html.py` script now correctly uses the virtualenv-installed
  asciidoc rather than requiring a system-wide installation.
- Crash with some notification servers when the server is quitting.
- Crash when using QtWebKit with PAC and the file has an invalid encoding.
- Crash with the "tiramisu" notification server.
- Crash when the "herbe" notification presenter doesn't start correctly.
- Crash when using `:print --pdf` with a directory where its parent directory
  did not exist.

[[v2.5.4]]
v2.5.4 (2023-03-13)
-------------------

Fixed
~~~~~

- Support SQLite with DQS (double quoted string) compile time option turned
  off.

[[v2.5.3]]
v2.5.3 (2023-02-17)
-------------------

Added
~~~~~

- New `array_at` quirk, polyfilling the