@@ -627,14 +627,9 @@ content.site_specific_quirks.skip:
       - misc-krunker
       - misc-mathml-darkmode
     none_ok: true
-  default: ["js-string-replaceall"]
+  default: []
   desc: >-
     Disable a list of named quirks.
-
-    The js-string-replaceall quirk is needed for Nextcloud Calendar < 2.2.0 with
-    QtWebEngine < 5.15.3. However, the workaround is not fully compliant to the
-    ECMAScript spec and might cause issues on other websites, so it's disabled by
-    default.
 
 # emacs: '
 
